# OOP-LABS-laba3

./: CMakeLists.txt  README.md
include/: Figure.h  FigureArray.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
src/: FigureArray.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp  main.cpp
tests/: test_main.cpp
